implement different modes

--- a/GravityGame/app.html
+++ b/GravityGame/app.html
@@ -1,1 +1,13 @@
-<applet code="GravityGameApplet.class" width=800 height=600></applet>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+</head>
+<body>
+<object type="application/x-java-applet" width=800 height=520>
+<param name="code" value="GravityGameApplet"/>
+</object>
+<p>yello:&nbsp;source,&nbsp;white:&nbsp;target
+<br>direction:<br> &nbsp;&nbsp;→x <br> ↓ <br> y
+</body>
+</html>
