gravitational additional features

--- a/GravityGame/app.html
+++ b/GravityGame/app.html
@@ -7,7 +7,7 @@
 <object type="application/x-java-applet" width=800 height=520>
 <param name="code" value="GravityGameApplet"/>
 </object>
-<p>yello:&nbsp;source,&nbsp;white:&nbsp;target
-<br>direction:<br> &nbsp;&nbsp;→x <br> ↓ <br> y
+The source, target, and both planets can be draggable.
+<br>direction:<br>y<br>&uarr;<br>&nbsp;&nbsp;→x
 </body>
 </html>
