added on/off history

--- a/GravityGame/app.html
+++ b/GravityGame/app.html
@@ -6,7 +6,7 @@
 <body>
 <object type="application/x-java-applet" width=800 height=520>
 <param name="code" value="GravityGameApplet"/>
-<param name="archive" value="GravityGame.jar"/>
+<!--<param name="archive" value="GravityGame.jar"/>-->
 </object>
 The source, target, and both planets can be draggable.
 <br>direction:<br>y<br>&uarr;<br>&nbsp;&nbsp;→x
